Exclude tests, docs and etc from the composer package

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
         "psr-4": {
             "axy\\fs\\paths\\": ""
         }
+    },
+    "archive": {
+        "exclude": ["/tests/*", "/doc/*", "/cs.sh", "/phpmd.sh", "/*.xml.dist", "/CHANGELOG.md"]
     }
 }
